--- a/index.html
+++ b/index.html
@@ -8,33 +8,47 @@
 </head>
 <body>
   <header>
-    <div id="logo">
-
+    <div id="header-cont">
+      <div id="logo">Header Logo</div>
+      <nav>
+        <ul>
+          <li><a href="#">header link one</a></li>
+          <li><a href="#">header link two</a></li>
+          <li><a href="#">header link three</a></li>
+        </ul>
+      </nav>
     </div>
-    <nav>
-      <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ul>
-    </nav>
   </header>
 
-  <section>
-    <h1 id="hero" class="secondary">This website is awesome</h1>
+  <section class="section one">
+    <div>
+      <div>
+        <h1 id="hero" class="secondary">This website is awesome</h1>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+          nisi ut aliquip ex ea commodo consequat.
+        </p>
+        <button class="hero-btn">Sign up</button>
+      </div>
+      <div id=img-placeholder>
+        <p>This is a placeholder for image.</p>
+      </div>
+    </div>
   </section>
 
-  <section>
+  <section class="section two">
     <h1 id="info-header">Some random information.</h1>
   </section>
 
-  <section id="quote-section">
+  <section class="section three">
     <p id="quote-text">asdf</p>
   </section>
 
-  <section>
+  <section class="section four">
     <div>
-      <button id="cta-btn">Sign up</button>
+      <button class="cta-btn">Sign up</button>
     </div>
   </section>
 
