Build sections 2 and 3
Added "information" and "quote" sections.

--- a/index.html
+++ b/index.html
@@ -39,11 +39,34 @@
   </section>
 
   <section class="section two">
-    <h1 id="info-header">Some random information.</h1>
+    <div class="s2-cont">
+      <h1 id="info-header">Some random information.</h1>
+      <div class="boxes">
+        <div class="box">
+          <div></div>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+        <div class="box">
+          <div></div>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+        <div class="box">
+          <div></div>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+        <div class="box">
+          <div></div>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+      </div>
+    </div>
   </section>
 
   <section class="section three">
-    <p id="quote-text">asdf</p>
+    <div class="s3-cont">
+      <p id="quote-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <p id="signature">-Thor, God of Thunder</p>
+    </div>
   </section>
 
   <section class="section four">
