--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
   </section>
 
   <section class="section four">
-    <div>
+    <div class="s4-cont">
+      <p>Call to action! It's time!</p>
+      <p></p>
       <button class="cta-btn">Sign up</button>
     </div>
   </section>
